# TurnTabler

./: CLAUDE.md  README.md  claude.md  generate_flac_chunks.py  pyproject.toml  regenerate_test_audio.sh  test-loop.flac
docs/: CODE-INTERNALS.md  STREAMING-FLOW.md
docs/archive/: DECISION-SUMMARY.md  PHASE1-CHECKLIST.md  airplay-protocol.md  soco-approach.md  sonos-native-vs-airplay.md
docs/hardware/: USB-AUDIO-QUICK-START.md  USB-HARDWARE-TESTING.md  raspberry-pi-5-guide.md  usb-audio-interface-guide.md
docs/implementation/: COMPLETE-ARCHITECTURE.md  dj-mode-design.md  owntone-deep-dive.md  soco-foundation-research.md  soco-poc-plan.md  tech-stack-decision.md
docs/linux-setup/: audio-stack-options.md
docs/research/: audio-quality.md  sender-vs-receiver.md
src/turntabler/: audio_source.py  cli.py  control.py  diagnostics.py  sonos_control.py  streaming.py  streaming_debug.py  streaming_icy.py  streaming_realtime.py  streaming_simple.py  streaming_test.py  streaming_wav.py  test_known_uri.py  test_wav.py  usb_audio.py  usb_audio_capture.py
src/turntabler/chunks/: chunk_00.flac  chunk_01.flac  chunk_02.flac  chunk_03.flac  chunk_04.flac  chunk_05.flac  chunk_06.flac  chunk_07.flac  chunk_08.flac  chunk_09.flac
tests/integration/: test_streaming_e2e.py
tests/manual/: diagnostic_sonos_uri.py  diagnostic_wav_playback.py
