[project]
name = "turntabler"
version = "0.1.0"
description = "Stream vinyl records to Sonos speakers with lossless audio quality"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "soco",
    "fastapi[standard]",
    "pyalsaaudio>=0.10.0",
    "typer>=0.12.0",
]

[project.scripts]
turntabler = "turntabler.cli:main"
